--- a/trunk/user/rp-l2tp/Makefile
+++ b/trunk/user/rp-l2tp/Makefile
@@ -1,9 +1,11 @@
 SRC_NAME=rp-l2tp-0.5-rtn
 
-CFLAGS=-O2 -fomit-frame-pointer -pipe -Wall -Wno-trigraphs -Wno-pointer-sign -Wno-strict-aliasing -I$(KERNEL_HEADERS_PATH)
-CFLAGS+=-DPPPOL2TP_V1
+CFLAGS   =-O2 -fomit-frame-pointer -pipe -Wall -Wno-trigraphs -Wno-pointer-sign -Wno-strict-aliasing -I$(KERNEL_HEADERS_PATH)
+CFLAGS  +=-DPPPOL2TP_V1
+CFLAGS  += -ffunction-sections -fdata-sections
+LDFLAGS += -Wl,--gc-sections
 
-all:	config_test build
+all: config_test build
 
 config_test:
 	( if [ -f ./config_done ]; then \
