--- a/trunk/user/wireless_tools/Makefile
+++ b/trunk/user/wireless_tools/Makefile
@@ -111,6 +111,9 @@ DEPFLAGS=-MMD
 XCFLAGS=$(CFLAGS) $(DEPFLAGS) $(WARN) $(HEADERS) $(WELIB_FLAG) $(WEDEF_FLAG)
 PICFLAG=-fPIC
 
+CFLAGS  += -ffunction-sections -fdata-sections
+LDFLAGS += -Wl,--gc-sections
+
 # Standard compilation targets
 all:: $(IWLIB) $(PROGS)
 
