--- a/trunk/user/xupnpd/src/Makefile
+++ b/trunk/user/xupnpd/src/Makefile
@@ -11,10 +11,15 @@ CFLAGS+=-static
 LUAMYCFLAGS+=-static
 endif
 
+CFLAGS  += -ffunction-sections -fdata-sections
+CPPFLAGS += -ffunction-sections -fdata-sections
+LUAMYCFLAGS += -ffunction-sections -fdata-sections
+LDFLAGS += -Wl,--gc-sections
+
 embedded:
 	make -C $(LUA) a MYCFLAGS='$(LUAMYCFLAGS)'
 	$(CC) $(CFLAGS) -c -o md5.o md5c.c
-	$(CC) $(CPPFLAGS) -DWITH_URANDOM -o xupnpd $(SRC) md5.o -llua -lm -ldl
+	$(CC) $(CPPFLAGS) $(LDFLAGS) -DWITH_URANDOM -o xupnpd $(SRC) md5.o -llua -lm -ldl
 
 clean:
 	make -C $(LUA) clean
