--- a/trunk/user/ebtables/ebtables-2.0.10-4/Makefile
+++ b/trunk/user/ebtables/ebtables-2.0.10-4/Makefile
@@ -24,6 +24,9 @@ ifeq ($(shell uname -m),sparc64)
 CFLAGS+=-DEBT_MIN_ALIGN=8 -DKERNEL_64_USERSPACE_32
 endif
 
+CFLAGS  += -ffunction-sections -fdata-sections
+LDFLAGS += -Wl,--gc-sections
+
 include extensions/Makefile
 
 OBJECTS2:=getethertype.o communication.o libebtc.o \
