--- a/trunk/user/iproute2/iproute2-3.4.0/tc/Makefile
+++ b/trunk/user/iproute2/iproute2-3.4.0/tc/Makefile
@@ -28,7 +28,7 @@ TCMODULES += q_dsmark.o
 TCMODULES += q_gred.o
 TCMODULES += f_tcindex.o
 TCMODULES += q_ingress.o
-#TCMODULES += q_hfsc.o
+TCMODULES += q_hfsc.o
 TCMODULES += q_htb.o
 #TCMODULES += q_drr.o
 #TCMODULES += q_qfq.o
