--- a/trunk/configs/IPv4/RT-N56U/kernel-3.0.x.config
+++ b/trunk/configs/IPv4/RT-N56U/kernel-3.0.x.config
@@ -595,7 +595,7 @@ CONFIG_NET_SCHED=y
 #
 # CONFIG_NET_SCH_CBQ is not set
 CONFIG_NET_SCH_HTB=m
-# CONFIG_NET_SCH_HFSC is not set
+CONFIG_NET_SCH_HFSC=m
 CONFIG_NET_SCH_PRIO=m
 # CONFIG_NET_SCH_MULTIQ is not set
 CONFIG_NET_SCH_RED=m
