--- a/trunk/configs/n65u_micro.config
+++ b/trunk/configs/n65u_micro.config
@@ -78,7 +78,7 @@ CONFIG_FIRMWARE_INCLUDE_UVC=y
 CONFIG_FIRMWARE_INCLUDE_SERIAL=y
 
 ### Include network QoS scheduling modules (~0.2MB)
-#CONFIG_FIRMWARE_INCLUDE_QOS=y
+CONFIG_FIRMWARE_INCLUDE_QOS=y
 
 ### Include IMQ module for shapers (~0.02MB, a bit of performance degradation)
 #CONFIG_FIRMWARE_INCLUDE_IMQ=y
@@ -93,7 +93,7 @@ CONFIG_FIRMWARE_INCLUDE_IPSET=y
 CONFIG_FIRMWARE_INCLUDE_NFSD=y
 
 ### Include NFSv3 client. kernel modules ~0.5MB
-#CONFIG_FIRMWARE_INCLUDE_NFSC=y
+CONFIG_FIRMWARE_INCLUDE_NFSC=y
 
 ### Include CIFS (SMB) client. kernel modules ~0.2MB
 #CONFIG_FIRMWARE_INCLUDE_CIFS=y
@@ -148,7 +148,7 @@ CONFIG_FIRMWARE_INCLUDE_DROPBEAR=y
 ### Include OpenSSH (and openssl libs) instead of dropbear. openssl ~1.2MB, openssh ~1.0MB
 #CONFIG_FIRMWARE_INCLUDE_OPENSSH=y
 
-### Include OpenVPN (and openssl libs). openssl ~1.2MB, openvpn ~0.4MB
+### Include OpenVPN (and openssl libs). IPv6 required. openssl ~1.2MB, openvpn ~0.4MB
 #CONFIG_FIRMWARE_INCLUDE_OPENVPN=y
 
 ### Include "openssl" executable for generate cerificates (~0.4MB)
