--- a/trunk/configs/n65u_nano.config
+++ b/trunk/configs/n65u_nano.config
@@ -148,7 +148,7 @@ CONFIG_FIRMWARE_INCLUDE_DROPBEAR=y
 ### Include OpenSSH (and openssl libs) instead of dropbear. openssl ~1.2MB, openssh ~1.0MB
 #CONFIG_FIRMWARE_INCLUDE_OPENSSH=y
 
-### Include OpenVPN (and openssl libs). openssl ~1.2MB, openvpn ~0.4MB
+### Include OpenVPN (and openssl libs). IPv6 required. openssl ~1.2MB, openvpn ~0.4MB
 #CONFIG_FIRMWARE_INCLUDE_OPENVPN=y
 
 ### Include "openssl" executable for generate cerificates (~0.4MB)
