rc: use iwpriv radio control for WiFi 5GHz on N65U boards (avoid SoC hungup issue)

--- a/trunk/user/shared/Makefile
+++ b/trunk/user/shared/Makefile
@@ -11,6 +11,7 @@ CFLAGS += -DBOARD_N56U
 endif
 ifeq ($(CONFIG_FIRMWARE_PRODUCT_ID),"RT-N65U")
 CFLAGS += -DBOARD_N65U
+CFLAGS += -DUSE_IWPRIV_RADIO_5G
 endif
 ifeq ($(CONFIG_FIRMWARE_PRODUCT_ID),"SWR1100")
 CFLAGS += -DBOARD_SWR1100
