project configs: typo fix

--- a/trunk/.config
+++ b/trunk/.config
@@ -151,7 +151,7 @@ CONFIG_FIRMWARE_INCLUDE_DROPBEAR=y
 ### Include OpenVPN (and openssl libs). IPv6 required. openssl ~1.2MB, openvpn ~0.4MB
 CONFIG_FIRMWARE_INCLUDE_OPENVPN=y
 
-### Include "openssl" executable for generate cerificates (~0.4MB)
+### Include "openssl" executable for generate certificates (~0.4MB)
 #CONFIG_FIRMWARE_INCLUDE_OPENVPN_OPENSSL_EXE=y
 
 ### Include xUPNPd IPTV Mediaserver, ~0.3MB
