--- a/trunk/configs/n65u_micro.config
+++ b/trunk/configs/n65u_micro.config
@@ -48,7 +48,7 @@ CONFIG_FIRMWARE_ENABLE_UFSD=y
 CONFIG_FIRMWARE_ENABLE_FAT=y
 
 ### Enable exFAT filesystem support (~0.1MB)
-CONFIG_FIRMWARE_ENABLE_EXFAT=y
+#CONFIG_FIRMWARE_ENABLE_EXFAT=y
 
 ### Enable EXT2 filesystem support (~0.1MB)
 #CONFIG_FIRMWARE_ENABLE_EXT2=y
@@ -151,7 +151,7 @@ CONFIG_FIRMWARE_INCLUDE_DROPBEAR=y
 ### Include OpenVPN (and openssl libs). IPv6 required. openssl ~1.2MB, openvpn ~0.4MB
 #CONFIG_FIRMWARE_INCLUDE_OPENVPN=y
 
-### Include "openssl" executable for generate cerificates (~0.4MB)
+### Include "openssl" executable for generate certificates (~0.4MB)
 #CONFIG_FIRMWARE_INCLUDE_OPENVPN_OPENSSL_EXE=y
 
 ### Include xUPNPd IPTV Mediaserver, ~0.3MB
