update exfat code to 1.2.5, allow use exfat for fat/fat32, include exfat for N56U (instead of vfat driver)

--- a/trunk/.config
+++ b/trunk/.config
@@ -45,10 +45,10 @@ CONFIG_FIRMWARE_ENABLE_IPV6=y
 CONFIG_FIRMWARE_ENABLE_UFSD=y
 
 ### Enable FAT/FAT32 filesystem support (~0.1MB)
-CONFIG_FIRMWARE_ENABLE_FAT=y
+#CONFIG_FIRMWARE_ENABLE_FAT=y
 
-### Enable exFAT filesystem support (~0.1MB)
-#CONFIG_FIRMWARE_ENABLE_EXFAT=y
+### Enable exFAT (FAT/FAT32 too) filesystem support (~0.12MB)
+CONFIG_FIRMWARE_ENABLE_EXFAT=y
 
 ### Enable EXT2 filesystem support (~0.1MB)
 #CONFIG_FIRMWARE_ENABLE_EXT2=y
