--- a/trunk/configs/IPv6/RT-N65U/kernel-3.0.x.config
+++ b/trunk/configs/IPv6/RT-N65U/kernel-3.0.x.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Linux/mips 3.0.93 Kernel Configuration
+# Linux/mips 3.0.94 Kernel Configuration
 #
 CONFIG_MIPS=y
 
@@ -1520,6 +1520,8 @@ CONFIG_VFAT_FS=m
 CONFIG_FAT_DEFAULT_CODEPAGE=866
 CONFIG_FAT_DEFAULT_IOCHARSET="utf8"
 CONFIG_EXFAT_FS=m
+CONFIG_EXFAT_DEFAULT_CODEPAGE=866
+CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
 # CONFIG_NTFS_FS is not set
 
 #
