--- a/trunk/configs/n56u_nano.config
+++ b/trunk/configs/n56u_nano.config
@@ -47,7 +47,7 @@ CONFIG_FIRMWARE_ENABLE_IPV6=y
 ### Enable FAT/FAT32 filesystem support (~0.1MB)
 #CONFIG_FIRMWARE_ENABLE_FAT=y
 
-### Enable exFAT filesystem support (~0.1MB)
+### Enable exFAT (FAT/FAT32 too) filesystem support (~0.12MB)
 #CONFIG_FIRMWARE_ENABLE_EXFAT=y
 
 ### Enable EXT2 filesystem support (~0.1MB)
