https,www: add HTTPS support, add SSH authorized_keys control to WebUI. Micro build now included HTTPS, SFTP, OpenVPN, OpenSSL

--- a/trunk/libs/Makefile
+++ b/trunk/libs/Makefile
@@ -22,14 +22,45 @@ dir_y =
 dir_n =
 dir_  =
 
-# build shared libs for firefly
-ifeq ($(CONFIG_FIRMWARE_INCLUDE_FIREFLY),y)
-LIBS_BUILD_SHARED=y
+LIBS_BUILD_SHARED=n
+LIBS_INCLUDE_LIBSSL=n
+LIBS_INCLUDE_LIBICONV=n
+LIBS_INCLUDE_MEDIA=n
+
+ifeq ($(CONFIG_FIRMWARE_INCLUDE_HTTPS),y)
+LIBS_INCLUDE_LIBSSL=y
 endif
 
-LIBS_INCLUDE_LIBSSL=$(if $(CONFIG_FIRMWARE_INCLUDE_SFTP)$(CONFIG_FIRMWARE_INCLUDE_OPENVPN)$(CONFIG_FIRMWARE_INCLUDE_OPENSSH)$(CONFIG_FIRMWARE_INCLUDE_TRANSMISSION)$(CONFIG_FIRMWARE_INCLUDE_ARIA),y,n)
-LIBS_INCLUDE_LIBICONV=$(if $(CONFIG_FIRMWARE_INCLUDE_MINIDLNA)$(CONFIG_FIRMWARE_INCLUDE_FIREFLY),y,n)
-LIBS_INCLUDE_MEDIA=$(if $(CONFIG_FIRMWARE_INCLUDE_MINIDLNA)$(CONFIG_FIRMWARE_INCLUDE_FIREFLY),y,n)
+ifeq ($(CONFIG_FIRMWARE_INCLUDE_SFTP),y)
+LIBS_INCLUDE_LIBSSL=y
+endif
+
+ifeq ($(CONFIG_FIRMWARE_INCLUDE_OPENVPN),y)
+LIBS_INCLUDE_LIBSSL=y
+endif
+
+ifeq ($(CONFIG_FIRMWARE_INCLUDE_OPENSSH),y)
+LIBS_INCLUDE_LIBSSL=y
+endif
+
+ifeq ($(CONFIG_FIRMWARE_INCLUDE_TRANSMISSION),y)
+LIBS_INCLUDE_LIBSSL=y
+endif
+
+ifeq ($(CONFIG_FIRMWARE_INCLUDE_ARIA),y)
+LIBS_INCLUDE_LIBSSL=y
+endif
+
+ifeq ($(CONFIG_FIRMWARE_INCLUDE_MINIDLNA),y)
+LIBS_INCLUDE_LIBICONV=y
+LIBS_INCLUDE_MEDIA=y
+endif
+
+ifeq ($(CONFIG_FIRMWARE_INCLUDE_FIREFLY),y)
+LIBS_BUILD_SHARED=y
+LIBS_INCLUDE_LIBICONV=y
+LIBS_INCLUDE_MEDIA=y
+endif
 
 dir_y						+= libz
 dir_$(LIBS_INCLUDE_LIBICONV)			+= libiconv
