--- a/trunk/configs/n56u_aria.config
+++ b/trunk/configs/n56u_aria.config
@@ -139,6 +139,9 @@ CONFIG_FIRMWARE_INCLUDE_SMBD_SYSLOG=y
 ### Include FTP server, ~0.2MB
 CONFIG_FIRMWARE_INCLUDE_FTPD=y
 
+### Include HTTPS support. openssl ~1.2MB
+CONFIG_FIRMWARE_INCLUDE_HTTPS=y
+
 ### Include sftp-server (and openssl libs). openssl ~1.2MB, sftp-server ~0.06MB
 CONFIG_FIRMWARE_INCLUDE_SFTP=y
 
@@ -152,7 +155,7 @@ CONFIG_FIRMWARE_INCLUDE_DROPBEAR=y
 CONFIG_FIRMWARE_INCLUDE_OPENVPN=y
 
 ### Include "openssl" executable for generate certificates (~0.4MB)
-CONFIG_FIRMWARE_INCLUDE_OPENVPN_OPENSSL_EXE=y
+CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=y
 
 ### Include xUPNPd IPTV Mediaserver, ~0.3MB
 CONFIG_FIRMWARE_INCLUDE_XUPNPD=y
