--- a/trunk/configs/n65u_micro.config
+++ b/trunk/configs/n65u_micro.config
@@ -139,8 +139,11 @@ CONFIG_FIRMWARE_INCLUDE_SMBD=y
 ### Include FTP server, ~0.2MB
 CONFIG_FIRMWARE_INCLUDE_FTPD=y
 
+### Include HTTPS support. openssl ~1.2MB
+CONFIG_FIRMWARE_INCLUDE_HTTPS=y
+
 ### Include sftp-server (and openssl libs). openssl ~1.2MB, sftp-server ~0.06MB
-#CONFIG_FIRMWARE_INCLUDE_SFTP=y
+CONFIG_FIRMWARE_INCLUDE_SFTP=y
 
 ### Include dropbear SSH, ~0.3MB
 CONFIG_FIRMWARE_INCLUDE_DROPBEAR=y
@@ -149,10 +152,10 @@ CONFIG_FIRMWARE_INCLUDE_DROPBEAR=y
 #CONFIG_FIRMWARE_INCLUDE_OPENSSH=y
 
 ### Include OpenVPN (and openssl libs). IPv6 required. openssl ~1.2MB, openvpn ~0.4MB
-#CONFIG_FIRMWARE_INCLUDE_OPENVPN=y
+CONFIG_FIRMWARE_INCLUDE_OPENVPN=y
 
 ### Include "openssl" executable for generate certificates (~0.4MB)
-#CONFIG_FIRMWARE_INCLUDE_OPENVPN_OPENSSL_EXE=y
+#CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=y
 
 ### Include xUPNPd IPTV Mediaserver, ~0.3MB
 CONFIG_FIRMWARE_INCLUDE_XUPNPD=y
