--- a/trunk/user/shared/Makefile
+++ b/trunk/user/shared/Makefile
@@ -6,6 +6,10 @@ CFLAGS += $(if $(CONFIG_RT3352_INIC_MII),-DUSE_RT3352_MII,)
 CFLAGS += $(if $(CONFIG_USB_XHCI_HCD),-DUSE_USB3,)
 CFLAGS += $(if $(CONFIG_IPV6),-DUSE_IPV6,)
 
+ifeq ($(CONFIG_FIRMWARE_INCLUDE_HTTPS),y)
+CFLAGS += -DSUPPORT_HTTPS
+endif
+
 ifeq ($(CONFIG_FIRMWARE_PRODUCT_ID),"RT-N56U")
 CFLAGS += -DBOARD_N56U
 endif
