multicast: add support IGMP/MLD snooping on bridge br0 and on giga-switch RTL8367

--- a/trunk/configs/IPv4/RT-N56U/kernel-3.4.x.config
+++ b/trunk/configs/IPv4/RT-N56U/kernel-3.4.x.config
@@ -605,7 +605,7 @@ CONFIG_L2TP=y
 CONFIG_STP=y
 CONFIG_BRIDGE=y
 CONFIG_BRIDGE_2WAYS_FDB=y
-# CONFIG_BRIDGE_IGMP_SNOOPING is not set
+CONFIG_BRIDGE_IGMP_SNOOPING=y
 CONFIG_BRIDGE_EAP=y
 # CONFIG_NET_DSA is not set
 CONFIG_VLAN_8021Q=y
@@ -1947,6 +1947,7 @@ CONFIG_RTL8367_LAN_CPU_EXT1=y
 # CONFIG_RTL8367_USE_INIC_EXT is not set
 CONFIG_RTL8367_RGMII_DELAY_TX=1
 CONFIG_RTL8367_RGMII_DELAY_RX=0
+CONFIG_RTL8367_IGMP_SNOOPING=y
 
 #
 # Ethernet Ralink RT3xx/RT28xx wire driver
