--- a/trunk/configs/IPv4/SWR1100/kernel-3.0.x.config
+++ b/trunk/configs/IPv4/SWR1100/kernel-3.0.x.config
@@ -571,7 +571,7 @@ CONFIG_L2TP=y
 CONFIG_STP=y
 CONFIG_BRIDGE=y
 CONFIG_BRIDGE_2WAYS_FDB=y
-# CONFIG_BRIDGE_IGMP_SNOOPING is not set
+CONFIG_BRIDGE_IGMP_SNOOPING=y
 CONFIG_BRIDGE_EAP=y
 # CONFIG_NET_DSA is not set
 CONFIG_VLAN_8021Q=y
@@ -1841,6 +1841,7 @@ CONFIG_RTL8367_PORT_LAN4=0
 CONFIG_RTL8367_LAN_CPU_EXT1=y
 CONFIG_RTL8367_RGMII_DELAY_TX=1
 CONFIG_RTL8367_RGMII_DELAY_RX=0
+CONFIG_RTL8367_IGMP_SNOOPING=y
 
 #
 # Ethernet Ralink RT3xx/RT28xx wire driver
