exfat: update to v1.2.6

--- a/trunk/configs/IPv4/BN750DB/kernel-3.0.x.config
+++ b/trunk/configs/IPv4/BN750DB/kernel-3.0.x.config
@@ -1490,6 +1490,10 @@ CONFIG_VFAT_FS=m
 CONFIG_FAT_DEFAULT_CODEPAGE=866
 CONFIG_FAT_DEFAULT_IOCHARSET="utf8"
 CONFIG_EXFAT_FS=m
+CONFIG_EXFAT_DISCARD=y
+# CONFIG_EXFAT_DELAYED_SYNC is not set
+# CONFIG_EXFAT_KERNEL_DEBUG is not set
+# CONFIG_EXFAT_DEBUG_MSG is not set
 CONFIG_EXFAT_DEFAULT_CODEPAGE=866
 CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
 # CONFIG_NTFS_FS is not set
