wifi drivers: merge

--- a/trunk/proprietary/rt_wifi/rt3090/2.4.X.X/rt3090_ap/Makefile
+++ b/trunk/proprietary/rt_wifi/rt3090/2.4.X.X/rt3090_ap/Makefile
@@ -128,6 +128,7 @@ endif
 ###################
 #  CFLAGS
 ###################
+EXTRA_CFLAGS += -Wall -Wstrict-prototypes -Wno-trigraphs
 EXTRA_CFLAGS += -DAGGREGATION_SUPPORT -DPIGGYBACK_SUPPORT -DWMM_SUPPORT -DLINUX
 EXTRA_CFLAGS += -DCONFIG_AP_SUPPORT -DAP_SCAN_SUPPORT -DUAPSD_AP_SUPPORT -DDOT11_N_SUPPORT -DDOT1X_SUPPORT
 EXTRA_CFLAGS += -DRTMP_MAC_PCI -DRTMP_PCI_SUPPORT -DRTMP_RF_RW_SUPPORT
