--- a/trunk/proprietary/rt_wifi/rt3883/2.4.X.X/rt2860v2_ap/Makefile
+++ b/trunk/proprietary/rt_wifi/rt3883/2.4.X.X/rt2860v2_ap/Makefile
@@ -165,6 +165,7 @@ endif
 ###################
 #  CFLAGS
 ##################
+EXTRA_CFLAGS += -Wall -Wstrict-prototypes -Wno-trigraphs
 EXTRA_CFLAGS += -DAGGREGATION_SUPPORT -DPIGGYBACK_SUPPORT -DWMM_SUPPORT -DLINUX
 EXTRA_CFLAGS += -DCONFIG_AP_SUPPORT -DAP_SCAN_SUPPORT -DUAPSD_AP_SUPPORT -DRTMP_RBUS_SUPPORT -DRTMP_MAC_PCI -DDOT11_N_SUPPORT -DDOT1X_SUPPORT
 EXTRA_CFLAGS += -DSTATS_COUNT_SUPPORT
@@ -216,12 +217,12 @@ ifeq ($(CONFIG_RALINK_RT3883),y)
 EXTRA_CFLAGS += -DRT3883 -DDOT11N_SS3_SUPPORT -DA_BAND_SUPPORT -DRTMP_RF_RW_SUPPORT
 # use 8 beacons for RT3883
 #EXTRA_CFLAGS += -DSPECIFIC_BCN_BUF_SUPPORT
+EXTRA_CFLAGS += -DSTREAM_MODE_SUPPORT
+EXTRA_CFLAGS += -DNEW_RATE_ADAPT_SUPPORT
 EXTRA_CFLAGS += -DRANGE_EXT_SUPPORT
 ifeq ($(CONFIG_RT2860V2_AP_TXBF),y)
 EXTRA_CFLAGS += -DTXBF_SUPPORT
 endif
-EXTRA_CFLAGS += -DSTREAM_MODE_SUPPORT
-EXTRA_CFLAGS += -DNEW_RATE_ADAPT_SUPPORT
 endif
 
 ifeq ($(CONFIG_RALINK_RT3052),y)
