--- a/trunk/proprietary/rt_wifi/rt3883/2.6.X.X/rt2860v2_ap/Makefile
+++ b/trunk/proprietary/rt_wifi/rt3883/2.6.X.X/rt2860v2_ap/Makefile
@@ -170,11 +170,11 @@ endif
 ifeq ($(CONFIG_RALINK_RT3883),y)
 rt2860v2_ap-objs += ../rt2860v2/common/rt_rf.o
 rt2860v2_ap-objs += ../rt2860v2/chips/rt3883.o
+rt2860v2_ap-objs += ../rt2860v2/rate_ctrl/alg_grp.o
 ifeq ($(CONFIG_RT2860V2_AP_TXBF),y)
 rt2860v2_ap-objs += ../rt2860v2/common/cmm_txbf.o
 rt2860v2_ap-objs += ../rt2860v2/common/cmm_txbf_cal.o
 endif
-rt2860v2_ap-objs += ../rt2860v2/rate_ctrl/alg_grp.o
 endif
 
 ifeq ($(CONFIG_RALINK_RT3052),y)
@@ -195,9 +195,10 @@ endif
 ###################
 #  CFLAGS
 ##################
+EXTRA_CFLAGS += -Wall -Wstrict-prototypes -Wno-trigraphs
 EXTRA_CFLAGS += -DAGGREGATION_SUPPORT -DPIGGYBACK_SUPPORT -DWMM_SUPPORT -DLINUX
 EXTRA_CFLAGS += -DCONFIG_AP_SUPPORT -DAP_SCAN_SUPPORT -DUAPSD_AP_SUPPORT -DRTMP_RBUS_SUPPORT -DRTMP_MAC_PCI -DDOT11_N_SUPPORT -DDOT1X_SUPPORT
-EXTRA_CFLAGS += -DSTATS_COUNT_SUPPORT -DNEW_TXCONT -DNEW_TXCARRSUPP
+EXTRA_CFLAGS += -DSTATS_COUNT_SUPPORT
 EXTRA_CFLAGS += -DRESOURCE_PRE_ALLOC
 EXTRA_CFLAGS += -DRSSI_FEEDBACK
 
@@ -228,7 +229,7 @@ EXTRA_CFLAGS += -DSYSTEM_LOG_SUPPORT
 endif
 
 ifeq ($(CONFIG_RT2860V2_AP_ATE),y)
-EXTRA_CFLAGS += -DRALINK_ATE -DRALINK_QA -DCONFIG_RT2880_ATE_CMD_NEW -DNEW_TXCON
+EXTRA_CFLAGS += -DRALINK_ATE -DRALINK_QA -DCONFIG_RT2880_ATE_CMD_NEW
 endif
 
 ifeq ($(CONFIG_RALINK_RT2880),y)
@@ -246,12 +247,12 @@ ifeq ($(CONFIG_RALINK_RT3883),y)
 EXTRA_CFLAGS += -DRT3883 -DDOT11N_SS3_SUPPORT -DA_BAND_SUPPORT -DRTMP_RF_RW_SUPPORT
 # use 8 beacons for RT3883
 #EXTRA_CFLAGS += -DSPECIFIC_BCN_BUF_SUPPORT
+EXTRA_CFLAGS += -DSTREAM_MODE_SUPPORT
+EXTRA_CFLAGS += -DNEW_RATE_ADAPT_SUPPORT
 EXTRA_CFLAGS += -DRANGE_EXT_SUPPORT
 ifeq ($(CONFIG_RT2860V2_AP_TXBF),y)
 EXTRA_CFLAGS += -DTXBF_SUPPORT
 endif
-EXTRA_CFLAGS += -DSTREAM_MODE_SUPPORT
-EXTRA_CFLAGS += -DNEW_RATE_ADAPT_SUPPORT
 endif
 
 ifeq ($(CONFIG_RALINK_RT3052),y)
