kernel-3.x.x: update ufsd 8.6 NTFS driver, now allow transmission/aria to work on NTFS volumes

--- a/trunk/configs/IPv6/RT-N56U/kernel-3.0.x.config
+++ b/trunk/configs/IPv6/RT-N56U/kernel-3.0.x.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Linux/mips 3.0.98 Kernel Configuration
+# Linux/mips 3.0.100 Kernel Configuration
 #
 CONFIG_MIPS=y
 
@@ -1549,6 +1549,8 @@ CONFIG_EXFAT_DISCARD=y
 # CONFIG_EXFAT_DEBUG_MSG is not set
 CONFIG_EXFAT_DEFAULT_CODEPAGE=866
 CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
+CONFIG_UFSD_FS=m
+# CONFIG_UFSD_USE_NLS is not set
 # CONFIG_NTFS_FS is not set
 
 #
