--- a/trunk/configs/IPv4/RT-N56U/kernel-3.4.x.config
+++ b/trunk/configs/IPv4/RT-N56U/kernel-3.4.x.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/mips 3.4.64 Kernel Configuration
+# Linux/mips 3.4.66 Kernel Configuration
 #
 CONFIG_MIPS=y
 
@@ -1612,6 +1612,8 @@ CONFIG_EXFAT_DISCARD=y
 # CONFIG_EXFAT_DEBUG_MSG is not set
 CONFIG_EXFAT_DEFAULT_CODEPAGE=866
 CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
+CONFIG_UFSD_FS=m
+# CONFIG_UFSD_USE_NLS is not set
 # CONFIG_NTFS_FS is not set
 
 #
