--- a/trunk/configs/n65u_base.config
+++ b/trunk/configs/n65u_base.config
@@ -42,7 +42,7 @@ CONFIG_FIRMWARE_WIFI2_DRIVER=2.7
 ### Enable IPv6 support
 CONFIG_FIRMWARE_ENABLE_IPV6=y
 
-### Enable NTFS and HFS+ filesystem support via Paragon "ufsd" driver (add ~0.7MB)
+### Enable NTFS filesystem support via Paragon "ufsd" driver (add ~0.4MB)
 CONFIG_FIRMWARE_ENABLE_UFSD=y
 
 ### Enable FAT/FAT32 filesystem support (~0.1MB)
