--- a/trunk/linux-3.0.x/fs/Kconfig
+++ b/trunk/linux-3.0.x/fs/Kconfig
@@ -99,6 +99,7 @@ menu "DOS/FAT/NT Filesystems"
 
 source "fs/fat/Kconfig"
 source "fs/exfat/Kconfig"
+source "fs/ufsd/Kconfig"
 source "fs/ntfs/Kconfig"
 
 endmenu
