--- a/trunk/configs/n56u_dlna.config
+++ b/trunk/configs/n56u_dlna.config
@@ -168,7 +168,7 @@ CONFIG_FIRMWARE_INCLUDE_MINIDLNA=y
 #CONFIG_FIRMWARE_INCLUDE_FIREFLY=y
 
 ### Include ffmpeg 0.11.x instead of 0.6.x for Minidlna and Firefly (robust scan, but swap needed)
-#CONFIG_FIRMWARE_INCLUDE_FFMPEG_NEW=y
+CONFIG_FIRMWARE_INCLUDE_FFMPEG_NEW=y
 
 ### Include Transmission torrent (and openssl libs). openssl ~1.2MB, transmission ~1.5MB
 CONFIG_FIRMWARE_INCLUDE_TRANSMISSION=y
