--- a/trunk/proprietary/rt_wifi/rt3883/2.7.X.X/rt2860v2_sta/Makefile
+++ b/trunk/proprietary/rt_wifi/rt3883/2.7.X.X/rt2860v2_sta/Makefile
@@ -226,6 +226,7 @@ endif
 EXTRA_CFLAGS += -Wall -Wstrict-prototypes -Wno-trigraphs
 EXTRA_CFLAGS += -DAGGREGATION_SUPPORT -DPIGGYBACK_SUPPORT -DWMM_SUPPORT -DLINUX
 EXTRA_CFLAGS += -DCONFIG_STA_SUPPORT -DRTMP_RBUS_SUPPORT -DRTMP_MAC_PCI -DDOT11_N_SUPPORT
+EXTRA_CFLAGS += -DRTMP_FLASH_SUPPORT
 EXTRA_CFLAGS += -DSTATS_COUNT_SUPPORT
 EXTRA_CFLAGS += -DRESOURCE_PRE_ALLOC
 
@@ -259,7 +260,6 @@ endif
 ifeq ($(CONFIG_RALINK_RT3883),y)
 EXTRA_CFLAGS += -DRT3883 -DDOT11N_SS3_SUPPORT
 EXTRA_CFLAGS += -DVCORECAL_SUPPORT
-EXTRA_CFLAGS += -DRTMP_FLASH_SUPPORT
 EXTRA_CFLAGS += -DSTREAM_MODE_SUPPORT
 EXTRA_CFLAGS += -DNEW_RATE_ADAPT_SUPPORT
 EXTRA_CFLAGS += -DRANGE_EXTEND
@@ -270,11 +270,11 @@ endif
 endif
 
 ifeq ($(CONFIG_RALINK_RT3052),y)
-EXTRA_CFLAGS += -DRT3052 -DRT305x
-endif
-
 ifeq ($(CONFIG_RALINK_RT3350),y)
 EXTRA_CFLAGS += -DRT3350 -DRT305x
+else
+EXTRA_CFLAGS += -DRT3052 -DRT305x
+endif
 endif
 
 ifeq ($(CONFIG_RALINK_RT3352),y)
@@ -292,7 +292,6 @@ endif
 ifeq ($(CONFIG_RALINK_MT7620),y)
 EXTRA_CFLAGS += -DRT6352 -DRF_BANK
 EXTRA_CFLAGS += -DVCORECAL_SUPPORT
-EXTRA_CFLAGS += -DRTMP_FLASH_SUPPORT
 EXTRA_CFLAGS += -DENHANCED_STAT_DISPLAY
 EXTRA_CFLAGS += -DRTMP_TEMPERATURE_CALIBRATION
 #EXTRA_CFLAGS += -DSPECIFIC_BCN_BUF_SUPPORT
