--- a/trunk/configs/IPv6/SWR1100/kernel-3.4.x.config
+++ b/trunk/configs/IPv6/SWR1100/kernel-3.4.x.config
@@ -2124,7 +2124,7 @@ CONFIG_RA_HW_NAT_UNB_MNP=1000
 CONFIG_RA_HW_NAT_UDP_DLTA=5
 CONFIG_RA_HW_NAT_TCP_DLTA=5
 CONFIG_RA_HW_NAT_FIN_DLTA=5
-CONFIG_RA_HW_NAT_IPV6=y
+# CONFIG_RA_HW_NAT_IPV6 is not set
 # CONFIG_RA_HW_NAT_ACL2UP_HELPER is not set
 # CONFIG_RA_HW_NAT_PCI is not set
 CONFIG_RA_HW_NAT_WIFI=y
