raeth: add support new SoC, improve TX path performance

--- a/trunk/configs/IPv6/RT-N65U/kernel-3.0.x.config
+++ b/trunk/configs/IPv6/RT-N65U/kernel-3.0.x.config
@@ -1880,16 +1880,13 @@ CONFIG_RTL8367_RGMII_DELAY_RX=0
 CONFIG_RTL8367_IGMP_SNOOPING=y
 
 #
-# Ethernet Ralink RT3xx/RT28xx wire driver
+# Ethernet Ralink RT28xx/RT3xxx/RT5xxx/MT762x wire driver
 #
 CONFIG_RAETH=y
-CONFIG_RA_NETWORK_TASKLET_BH=y
-# CONFIG_RA_NETWORK_WORKQUEUE_BH is not set
-# CONFIG_RAETH_NAPI is not set
 # CONFIG_RAETH_JUMBOFRAME is not set
+CONFIG_RAETH_HW_VLAN_TX=y
 CONFIG_RAETH_CHECKSUM_OFFLOAD=y
 CONFIG_RAETH_SG_DMA_TX=y
-CONFIG_RAETH_HW_VLAN_TX=y
 # CONFIG_GE1_MII_FORCE_100 is not set
 # CONFIG_GE1_MII_AN is not set
 # CONFIG_GE1_RVMII_FORCE_100 is not set
