--- a/trunk/configs/n65u_full.config
+++ b/trunk/configs/n65u_full.config
@@ -46,16 +46,16 @@ CONFIG_FIRMWARE_ENABLE_IPV6=y
 CONFIG_FIRMWARE_ENABLE_UFSD=y
 
 ### Enable FAT/FAT32 filesystem support (~0.1MB)
-CONFIG_FIRMWARE_ENABLE_FAT=y
+#CONFIG_FIRMWARE_ENABLE_FAT=y
 
 ### Enable exFAT (FAT/FAT32 too) filesystem support (~0.12MB)
 CONFIG_FIRMWARE_ENABLE_EXFAT=y
 
 ### Enable EXT2 filesystem support (~0.1MB)
-CONFIG_FIRMWARE_ENABLE_EXT2=y
+#CONFIG_FIRMWARE_ENABLE_EXT2=y
 
 ### Enable EXT3 filesystem support (~0.2MB)
-CONFIG_FIRMWARE_ENABLE_EXT3=y
+#CONFIG_FIRMWARE_ENABLE_EXT3=y
 
 ### Enable EXT4 (EXT3/2 too) filesystem support (~0.4MB)
 CONFIG_FIRMWARE_ENABLE_EXT4=y
@@ -79,7 +79,7 @@ CONFIG_FIRMWARE_INCLUDE_UVC=y
 CONFIG_FIRMWARE_INCLUDE_SERIAL=y
 
 ### Include network QoS scheduling modules (~0.2MB)
-CONFIG_FIRMWARE_INCLUDE_QOS=y
+#CONFIG_FIRMWARE_INCLUDE_QOS=y
 
 ### Include IMQ module for shapers (~0.02MB, a bit of performance degradation)
 #CONFIG_FIRMWARE_INCLUDE_IMQ=y
