system: enable shadow passwd

--- a/trunk/configs/IPv4/busybox.config
+++ b/trunk/configs/IPv4/busybox.config
@@ -447,7 +447,7 @@ CONFIG_INIT_TERMINAL_TYPE=""
 #
 # CONFIG_ADD_SHELL is not set
 # CONFIG_REMOVE_SHELL is not set
-# CONFIG_FEATURE_SHADOWPASSWDS is not set
+CONFIG_FEATURE_SHADOWPASSWDS=y
 # CONFIG_USE_BB_PWD_GRP is not set
 # CONFIG_USE_BB_SHADOW is not set
 # CONFIG_USE_BB_CRYPT is not set
