wireless: disable Direct Link Setup (DLS) feature

--- a/trunk/configs/IPv4/BN750DB/kernel-3.0.x.config
+++ b/trunk/configs/IPv4/BN750DB/kernel-3.0.x.config
@@ -1890,7 +1890,7 @@ CONFIG_RT2860V2_AP_IGMP_SNOOP=y
 # CONFIG_RT2860V2_AP_NETIF_BLOCK is not set
 # CONFIG_RT2860V2_AP_DFS is not set
 # CONFIG_RT2860V2_AP_CARRIER is not set
-CONFIG_RT2860V2_AP_DLS=y
+# CONFIG_RT2860V2_AP_DLS is not set
 # CONFIG_RT2860V2_AP_IDS is not set
 # CONFIG_RT2860V2_AP_ANTENNA_DIVERSITY is not set
 CONFIG_RT2860V2_AP_GREENAP=y
@@ -1919,7 +1919,7 @@ CONFIG_RT3090_AP_APCLI=y
 CONFIG_RT3090_AP_IGMP_SNOOP=y
 # CONFIG_RT3090_AP_NETIF_BLOCK is not set
 # CONFIG_RT3090_AP_VIDEO_TURBINE is not set
-CONFIG_RT3090_AP_DLS=y
+# CONFIG_RT3090_AP_DLS is not set
 CONFIG_RT3090_AP_GREENAP=y
 CONFIG_RT3090_AP_AUTO_CH_SELECT_ENHANCE=y
 # CONFIG_RT3090_AP_80211N_DRAFT3 is not set
