--- a/trunk/configs/IPv6/RT-N65U/kernel-3.0.x.config
+++ b/trunk/configs/IPv6/RT-N65U/kernel-3.0.x.config
@@ -1920,7 +1920,7 @@ CONFIG_RT2860V2_AP_IGMP_SNOOP=y
 # CONFIG_RT2860V2_AP_NETIF_BLOCK is not set
 # CONFIG_RT2860V2_AP_DFS is not set
 # CONFIG_RT2860V2_AP_CARRIER is not set
-CONFIG_RT2860V2_AP_DLS=y
+# CONFIG_RT2860V2_AP_DLS is not set
 # CONFIG_RT2860V2_AP_IDS is not set
 # CONFIG_RT2860V2_AP_ANTENNA_DIVERSITY is not set
 CONFIG_RT2860V2_AP_GREENAP=y
