--- a/trunk/configs/n14u_nano.config
+++ b/trunk/configs/n14u_nano.config
@@ -33,7 +33,7 @@ CONFIG_TOOLCHAIN_DIR=/opt/rt-n56u/toolchain-rt3883
 CONFIG_FIRMWARE_WIFI5_DRIVER=2.7
 
 ### Enable IPv6 support
-#CONFIG_FIRMWARE_ENABLE_IPV6=y
+CONFIG_FIRMWARE_ENABLE_IPV6=y
 
 ### Enable NTFS filesystem support via Paragon "ufsd" driver (add ~0.4MB)
 #CONFIG_FIRMWARE_ENABLE_UFSD=y
