project configs: tune N14U/N65U targets

--- a/trunk/configs/n14u_base.config
+++ b/trunk/configs/n14u_base.config
@@ -39,7 +39,7 @@ CONFIG_FIRMWARE_ENABLE_IPV6=y
 CONFIG_FIRMWARE_ENABLE_UFSD=y
 
 ### Enable FAT/FAT32 filesystem support (~0.1MB)
-#CONFIG_FIRMWARE_ENABLE_FAT=y
+CONFIG_FIRMWARE_ENABLE_FAT=y
 
 ### Enable exFAT (FAT/FAT32 too) filesystem support (~0.12MB)
 CONFIG_FIRMWARE_ENABLE_EXFAT=y
