allow to disable USB3 interface for N65U target

--- a/trunk/user/httpd/Makefile
+++ b/trunk/user/httpd/Makefile
@@ -9,6 +9,7 @@ CFLAGS += $(if $(CONFIG_RA_HW_NAT_PCI),-DUSE_WWAN_HW_NAT,)
 CFLAGS += $(if $(CONFIG_RAETH_GMAC2),,-DUSE_SINGLE_MAC)
 CFLAGS += $(if $(CONFIG_RT3352_INIC_MII),-DUSE_RT3352_MII,)
 CFLAGS += $(if $(CONFIG_RT2860V2_AP_WSC),-DUSE_WSC_WPS,)
+CFLAGS += $(if $(CONFIG_USB_XHCI_HCD),-DUSE_USB3,)
 CFLAGS += $(if $(CONFIG_FIRMWARE_INCLUDE_LPRD),-DSRV_LPRD,)
 CFLAGS += $(if $(CONFIG_FIRMWARE_INCLUDE_U2EC),-DSRV_U2EC,)
 CFLAGS += $(if $(CONFIG_FIRMWARE_INCLUDE_HDPARM),-DUTL_HDPARM,)
