--- a/trunk/configs/n65u_base.config
+++ b/trunk/configs/n65u_base.config
@@ -89,7 +89,7 @@ CONFIG_FIRMWARE_INCLUDE_NFSD=y
 CONFIG_FIRMWARE_INCLUDE_NFSC=y
 
 ### Include CIFS (SMB) client. kernel modules ~0.2MB
-#CONFIG_FIRMWARE_INCLUDE_CIFS=y
+CONFIG_FIRMWARE_INCLUDE_CIFS=y
 
 ############################################################
 ### Userspace configuration
