ufsd: enable NLS

--- a/trunk/configs/IPv4/RT-N14U/kernel-3.0.x.config
+++ b/trunk/configs/IPv4/RT-N14U/kernel-3.0.x.config
@@ -1455,7 +1455,7 @@ CONFIG_EXFAT_DISCARD=y
 CONFIG_EXFAT_DEFAULT_CODEPAGE=866
 CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
 CONFIG_UFSD_FS=m
-# CONFIG_UFSD_USE_NLS is not set
+CONFIG_UFSD_USE_NLS=y
 # CONFIG_NTFS_FS is not set
 
 #
