--- a/trunk/user/transmission/transmission-2.8x/Makefile.in
+++ b/trunk/user/transmission/transmission-2.8x/Makefile.in
@@ -423,7 +423,7 @@ all: all-recursive
 .SUFFIXES:
 am--refresh: Makefile
 	@:
-$(srcdir)/Makefile.in:  $(srcdir)/Makefile.am  $(am__configure_deps)
+$(srcdir)/Makefile.in:  $(srcdir)/Makefile.am
 	@for dep in $?; do \
 	  case '$(am__configure_deps)' in \
 	    *$$dep*) \
