--- a/trunk/user/miniupnpd/miniupnpd-1.8.x/Makefile.linux
+++ b/trunk/user/miniupnpd/miniupnpd-1.8.x/Makefile.linux
@@ -1,6 +1,6 @@
-# $Id: Makefile.linux,v 1.78 2013/05/03 09:30:33 nanard Exp $
+# $Id: Makefile.linux,v 1.81 2014/01/27 10:06:58 nanard Exp $
 # MiniUPnP project
-# (c) 2006-2013 Thomas Bernard
+# (c) 2006-2014 Thomas Bernard
 # http://miniupnp.free.fr/ or http://miniupnp.tuxfamily.org/
 # Author : Thomas Bernard
 # for use with GNU Make
@@ -29,6 +29,7 @@ CFLAGS += -Wall
 CFLAGS += -Wextra -Wstrict-prototypes -Wdeclaration-after-statement
 #CFLAGS += -Wno-missing-field-initializers
 #CFLAGS += -ansi	# iptables headers does use typeof which is a gcc extension
+CFLAGS += -fno-common
 CC ?= gcc
 RM = rm -f
 INSTALL = install
@@ -38,9 +39,13 @@ CP = cp
 CFLAGS += -ffunction-sections -fdata-sections
 LDFLAGS += -Wl,--gc-sections
 
-LIBS = $(IPTABLESPATH)/libiptc/.libs/libip4tc.a
-CFLAGS := $(CFLAGS) -DIPTABLES_143 -I$(IPTABLESPATH)/include
-LDFLAGS := $(LDFLAGS) -L$(IPTABLESPATH)/libiptc/.libs
+LIBS  = $(IPTABLESPATH)/libiptc/.libs/libip4tc.a
+ifeq ($(ENABLE_IPV6),1)
+LIBS += $(IPTABLESPATH)/libiptc/.libs/libip6tc.a
+LIBS += $(STAGEDIR)/lib/libnfnetlink.a
+endif
+CFLAGS += -DIPTABLES_143 -I$(IPTABLESPATH)/include
+LDFLAGS += -L$(IPTABLESPATH)/libiptc/.libs
 
 INSTALLPREFIX ?= $(PREFIX)/usr
 SBININSTALLDIR = $(INSTALLPREFIX)/sbin
@@ -50,19 +55,21 @@ MANINSTALLDIR = $(INSTALLPREFIX)/share/man/man8
 BASEOBJS = miniupnpd.o upnphttp.o upnpdescgen.o upnpsoap.o \
            upnpreplyparse.o minixml.o \
            upnpredirect.o getifaddr.o daemonize.o upnpglobalvars.o \
-           options.o upnppermissions.o minissdp.o natpmp.o \
+           options.o upnppermissions.o minissdp.o natpmp.o pcpserver.o \
            upnpevents.o upnputils.o getconnstatus.o \
-           upnppinhole.o
+           upnppinhole.o pcplearndscp.o
 
 LNXOBJS = linux/getifstats.o linux/ifacewatcher.o
-NETFILTEROBJS = netfilter/iptcrdr.o netfilter/iptpinhole.o
+ifeq ($(ENABLE_IPV6),1)
+LNXOBJS += linux/getroute.o
+endif
+NETFILTEROBJS = netfilter/iptcrdr.o netfilter/iptpinhole.o netfilter/nfct_get.o
 
 ALLOBJS = $(BASEOBJS) $(LNXOBJS) $(NETFILTEROBJS)
 
 TESTUPNPDESCGENOBJS = testupnpdescgen.o upnpdescgen.o
 
-EXECUTABLES = miniupnpd testupnpdescgen testgetifstats \
-              testupnppermissions miniupnpdctl testgetifaddr
+EXECUTABLES = miniupnpd miniupnpdctl
 
 .PHONY:	all clean install depend genuuid
 
@@ -115,6 +122,8 @@ testupnppermissions:	testupnppermissions.o upnppermissions.o
 
 testgetifaddr:	testgetifaddr.o getifaddr.o
 
+testgetroute:	testgetroute.o linux/getroute.o upnputils.o -lnfnetlink
+
 miniupnpdctl:	miniupnpdctl.o
 
 config.h:	genconfig.sh VERSION
@@ -131,8 +140,8 @@ depend:	config.h
 miniupnpd.o: config.h macros.h upnpglobalvars.h upnppermissions.h
 miniupnpd.o: miniupnpdtypes.h upnphttp.h upnpdescgen.h miniupnpdpath.h
 miniupnpd.o: getifaddr.h upnpsoap.h options.h minissdp.h upnpredirect.h
-miniupnpd.o: upnppinhole.h daemonize.h upnpevents.h natpmp.h commonrdr.h
-miniupnpd.o: upnputils.h ifacewatcher.h
+miniupnpd.o: upnppinhole.h daemonize.h upnpevents.h natpmp.h pcpserver.h
+miniupnpd.o: commonrdr.h upnputils.h ifacewatcher.h
 upnphttp.o: config.h upnphttp.h upnpdescgen.h miniupnpdpath.h upnpsoap.h
 upnphttp.o: upnpevents.h upnputils.h
 upnpdescgen.o: config.h getifaddr.h upnpredirect.h upnpdescgen.h
@@ -150,7 +159,7 @@ upnpredirect.o: netfilter/iptcrdr.h commonrdr.h
 getifaddr.o: config.h getifaddr.h
 daemonize.o: daemonize.h config.h
 upnpglobalvars.o: config.h upnpglobalvars.h upnppermissions.h
-upnpglobalvars.o: miniupnpdtypes.h
+upnpglobalvars.o: miniupnpdtypes.h upnpdescstrings.h
 options.o: config.h options.h upnppermissions.h upnpglobalvars.h
 options.o: miniupnpdtypes.h
 upnppermissions.o: config.h upnppermissions.h
@@ -159,6 +168,9 @@ minissdp.o: upnpglobalvars.h upnppermissions.h miniupnpdtypes.h minissdp.h
 minissdp.o: upnputils.h getroute.h codelength.h
 natpmp.o: macros.h config.h natpmp.h upnpglobalvars.h upnppermissions.h
 natpmp.o: miniupnpdtypes.h getifaddr.h upnpredirect.h commonrdr.h upnputils.h
+pcpserver.o: config.h pcpserver.h macros.h upnpglobalvars.h upnppermissions.h
+pcpserver.o: miniupnpdtypes.h pcplearndscp.h upnpredirect.h commonrdr.h
+pcpserver.o: getifaddr.h pcp_msg_struct.h
 upnpevents.o: config.h upnpevents.h miniupnpdpath.h upnpglobalvars.h
 upnpevents.o: upnppermissions.h miniupnpdtypes.h upnpdescgen.h upnputils.h
 upnputils.o: config.h upnputils.h upnpglobalvars.h upnppermissions.h
@@ -167,6 +179,8 @@ getconnstatus.o: getconnstatus.h getifaddr.h
 upnppinhole.o: macros.h config.h upnpredirect.h upnpglobalvars.h
 upnppinhole.o: upnppermissions.h miniupnpdtypes.h upnpevents.h
 upnppinhole.o: netfilter/iptpinhole.h
+pcplearndscp.o: config.h upnpglobalvars.h upnppermissions.h miniupnpdtypes.h
+pcplearndscp.o: pcplearndscp.h
 linux/getifstats.o: config.h getifstats.h
 linux/ifacewatcher.o: config.h ifacewatcher.h config.h minissdp.h
 linux/ifacewatcher.o: miniupnpdtypes.h getifaddr.h upnpglobalvars.h
@@ -177,7 +191,8 @@ netfilter/iptcrdr.o: config.h upnpglobalvars.h upnppermissions.h
 netfilter/iptcrdr.o: miniupnpdtypes.h
 netfilter/iptpinhole.o: config.h netfilter/iptpinhole.h upnpglobalvars.h
 netfilter/iptpinhole.o: upnppermissions.h config.h miniupnpdtypes.h
-testupnpdescgen.o: macros.h config.h upnpdescgen.h
+testupnpdescgen.o: macros.h config.h upnpdescgen.h upnpdescstrings.h
+testupnpdescgen.o: getifaddr.h
 upnpdescgen.o: config.h getifaddr.h upnpredirect.h upnpdescgen.h
 upnpdescgen.o: miniupnpdpath.h upnpglobalvars.h upnppermissions.h
 upnpdescgen.o: miniupnpdtypes.h upnpdescstrings.h upnpurns.h getconnstatus.h
