rc: firewall improvements, add ipv6 firewall for FORWARD rule, remove unneded rule for drop RH0 packet, fix restart firewall after aria2 and transmission stop

--- a/trunk/configs/IPv6/RT-N14U/kernel-3.4.x.config
+++ b/trunk/configs/IPv6/RT-N14U/kernel-3.4.x.config
@@ -602,7 +602,7 @@ CONFIG_IP6_NF_IPTABLES=y
 # CONFIG_IP6_NF_MATCH_IPV6HEADER is not set
 # CONFIG_IP6_NF_MATCH_MH is not set
 # CONFIG_IP6_NF_MATCH_RPFILTER is not set
-CONFIG_IP6_NF_MATCH_RT=y
+# CONFIG_IP6_NF_MATCH_RT is not set
 CONFIG_IP6_NF_TARGET_HL=m
 CONFIG_IP6_NF_FILTER=y
 CONFIG_IP6_NF_TARGET_REJECT=y
