--- a/trunk/configs/IPv6/RT-N56U/kernel-3.0.x.ram.config
+++ b/trunk/configs/IPv6/RT-N56U/kernel-3.0.x.ram.config
@@ -596,7 +596,7 @@ CONFIG_IP6_NF_IPTABLES=y
 # CONFIG_IP6_NF_MATCH_HL is not set
 # CONFIG_IP6_NF_MATCH_IPV6HEADER is not set
 # CONFIG_IP6_NF_MATCH_MH is not set
-CONFIG_IP6_NF_MATCH_RT=y
+# CONFIG_IP6_NF_MATCH_RT is not set
 CONFIG_IP6_NF_TARGET_HL=m
 CONFIG_IP6_NF_TARGET_LOG=y
 CONFIG_IP6_NF_FILTER=y
