--- a/trunk/user/rc/Makefile
+++ b/trunk/user/rc/Makefile
@@ -17,6 +17,7 @@ CFLAGS += $(if $(CONFIG_FIRMWARE_INCLUDE_SMBD),-DAPP_SMBD,)
 CFLAGS += $(if $(CONFIG_FIRMWARE_INCLUDE_FTPD),-DAPP_FTPD,)
 CFLAGS += $(if $(CONFIG_FIRMWARE_INCLUDE_NFSD),-DAPP_NFSD,)
 CFLAGS += $(if $(CONFIG_IPV6),-DUSE_IPV6,)
+CFLAGS += $(if $(CONFIG_NETFILTER_XT_MATCH_STATE),,-DUSE_MATCH_CONNTRACK)
 CFLAGS += $(if $(CONFIG_RAETH_GMAC2),,-DUSE_SINGLE_MAC)
 CFLAGS += $(if $(CONFIG_USB_XHCI_HCD),-DUSE_USB3,)
 CFLAGS += $(if $(CONFIG_RT2860V2_AP),-DUSE_RT2860V2_AP,)
