miniupnpd: improve PCP support (follow upstream)

--- a/trunk/user/miniupnpd/Makefile
+++ b/trunk/user/miniupnpd/Makefile
@@ -1,10 +1,13 @@
 SRC_NAME=miniupnpd-1.8.x
 
-IPT_VERSION=iptables-1.4.16.3
+# reference to iptables package
+IPT_VERSION:=iptables-1.4.16.3
 
 # disable support IPv6 yet, because no profit w/o IGDv2
 # e.g. Windows not supported IGDv2 and UPnP not worked
-ENABLE_IPV6=0
+ENABLE_IPV6:=0
+
+IPTABLESPATH=$(ROOTDIR)/user/iptables/$(IPT_VERSION)
 
 all:
 ifeq ($(CONFIG_IPV6),y)
@@ -12,7 +15,7 @@ ifeq ($(CONFIG_IPV6),y)
 else
 	cd $(SRC_NAME) && ./genconfig.sh
 endif
-	$(MAKE) -f Makefile.linux -C $(SRC_NAME) IPTABLESPATH=$(ROOTDIR)/user/iptables/$(IPT_VERSION) ENABLE_IPV6=$(ENABLE_IPV6)
+	$(MAKE) -f Makefile.linux -C $(SRC_NAME) IPTABLESPATH=$(IPTABLESPATH) ENABLE_IPV6=$(ENABLE_IPV6)
 
 clean:
 	$(MAKE) -f Makefile.linux -C $(SRC_NAME) clean
