--- a/trunk/.config
+++ b/trunk/.config
@@ -150,7 +150,7 @@ CONFIG_FIRMWARE_INCLUDE_SFTP=y
 CONFIG_FIRMWARE_INCLUDE_DROPBEAR=y
 
 ### Make the dropbear symmetrical ciphers and hashes faster. ~0.06MB
-#CONFIG_FIRMWARE_INCLUDE_DROPBEAR_FAST_CODE=y
+CONFIG_FIRMWARE_INCLUDE_DROPBEAR_FAST_CODE=y
 
 ### Include OpenSSH (and openssl libs) instead of dropbear. openssl ~1.2MB, openssh ~1.0MB
 #CONFIG_FIRMWARE_INCLUDE_OPENSSH=y
