--- a/trunk/configs/n14u_full.config
+++ b/trunk/configs/n14u_full.config
@@ -30,61 +30,61 @@ CONFIG_FIRMWARE_WIFI2_DRIVER=2.7
 ### Enable IPv6 support
 CONFIG_FIRMWARE_ENABLE_IPV6=y
 
-### Enable NTFS filesystem support via Paragon "ufsd" driver (add ~0.4MB)
+### Enable NTFS filesystem support via Paragon "ufsd" driver. ~0.4MB
 CONFIG_FIRMWARE_ENABLE_UFSD=y
 
-### Enable FAT/FAT32 filesystem support (~0.1MB)
+### Enable FAT/FAT32 filesystem support. ~0.1MB
 CONFIG_FIRMWARE_ENABLE_FAT=y
 
-### Enable exFAT (FAT/FAT32 too) filesystem support (~0.12MB)
+### Enable exFAT (FAT/FAT32 too) filesystem support. ~0.12MB
 CONFIG_FIRMWARE_ENABLE_EXFAT=y
 
-### Enable EXT2 filesystem support (~0.1MB)
+### Enable EXT2 filesystem support. ~0.1MB
 #CONFIG_FIRMWARE_ENABLE_EXT2=y
 
-### Enable EXT3 filesystem support (~0.2MB)
+### Enable EXT3 filesystem support. ~0.2MB
 #CONFIG_FIRMWARE_ENABLE_EXT3=y
 
-### Enable EXT4 (EXT3/2 too) filesystem support (~0.4MB)
+### Enable EXT4 (EXT3/2 too) filesystem support. ~0.4MB
 CONFIG_FIRMWARE_ENABLE_EXT4=y
 
-### Enable XFS filesystem support (~0.6MB)
+### Enable XFS filesystem support. ~0.6MB
 #CONFIG_FIRMWARE_ENABLE_XFS=y
 
-### Enable FUSE (filesystems in userspace) support (~0.1MB)
+### Enable FUSE (filesystems in userspace) support. ~0.1MB
 CONFIG_FIRMWARE_ENABLE_FUSE=y
 
-### Enable swap files/partitions support (~0.05MB)
+### Enable swap files/partitions support. ~0.05MB
 CONFIG_FIRMWARE_ENABLE_SWAP=y
 
-### Include UVC camera modules (~0.2MB)
+### Include UVC camera modules. ~0.2MB
 CONFIG_FIRMWARE_INCLUDE_UVC=y
 
-### Include USB-HID modules (~0.2MB)
+### Include USB-HID modules. ~0.2MB
 #CONFIG_FIRMWARE_INCLUDE_HID=y
 
-### Include USB-Serial modules (e.g. pl2303) (~0.03MB)
+### Include USB-Serial modules (e.g. pl2303). ~0.03MB
 CONFIG_FIRMWARE_INCLUDE_SERIAL=y
 
-### Include network QoS scheduling modules (~0.2MB)
+### Include network QoS scheduling modules. ~0.2MB
 #CONFIG_FIRMWARE_INCLUDE_QOS=y
 
-### Include IMQ module for shapers (~0.02MB, a bit of performance degradation)
+### Include IMQ module for shapers (a bit of performance degradation). ~0.02MB
 #CONFIG_FIRMWARE_INCLUDE_IMQ=y
 
-### Include IFB module for shapers (~0.03MB)
+### Include IFB module for shapers. ~0.03MB
 #CONFIG_FIRMWARE_INCLUDE_IFB=y
 
-### Include IPSet utility, and kernel modules (~0.4MB)
+### Include IPSet utility and kernel modules. ~0.4MB
 CONFIG_FIRMWARE_INCLUDE_IPSET=y
 
-### Include NFSv3 server. kernel modules ~0.4MB, nfs-utils ~0.2MB
+### Include NFSv3 server. ~0.6MB
 CONFIG_FIRMWARE_INCLUDE_NFSD=y
 
-### Include NFSv3 client. kernel modules ~0.5MB
+### Include NFSv3 client. ~0.5MB
 CONFIG_FIRMWARE_INCLUDE_NFSC=y
 
-### Include CIFS (SMB) client. kernel modules ~0.2MB
+### Include CIFS (SMB) client. ~0.2MB
 CONFIG_FIRMWARE_INCLUDE_CIFS=y
 
 ############################################################
@@ -104,69 +104,72 @@ CONFIG_FIRMWARE_INCLUDE_CIFS=y
 CONFIG_FIRMWARE_INCLUDE_LANG_RU=y
 #CONFIG_FIRMWARE_INCLUDE_LANG_SV=y
 
-### Include LPR printer daemon, ~0.12MB
+### Include LPR printer daemon. ~0.12MB
 CONFIG_FIRMWARE_INCLUDE_LPRD=y
 
-### Include USB-over-Ethernet printer daemon, ~0.05MB
+### Include USB-over-Ethernet printer daemon. ~0.05MB
 CONFIG_FIRMWARE_INCLUDE_U2EC=y
 
-### Include "tcpdump" utility, ~0.6MB
+### Include "tcpdump" utility. ~0.6MB
 CONFIG_FIRMWARE_INCLUDE_TCPDUMP=y
 
-### Include "hdparm" utility (allow set HDD spindown timeout and APM), ~0.1MB
+### Include "hdparm" utility (allow set HDD spindown timeout and APM). ~0.1MB
 CONFIG_FIRMWARE_INCLUDE_HDPARM=y
 
-### Include "parted" utility (allow make GPT partitions), ~0.3MB
+### Include "parted" utility (allow make GPT partitions). ~0.3MB
 CONFIG_FIRMWARE_INCLUDE_PARTED=y
 
-### Include SMB server, ~1.5MB
+### Include SMB server. ~1.5MB
 CONFIG_FIRMWARE_INCLUDE_SMBD=y
 
-### Include syslog for SMB server, ~0.3MB
+### Include syslog for SMB server. ~0.3MB
 CONFIG_FIRMWARE_INCLUDE_SMBD_SYSLOG=y
 
-### Include FTP server, ~0.2MB
+### Include FTP server. ~0.2MB
 CONFIG_FIRMWARE_INCLUDE_FTPD=y
+
+### Include EAP-TTLS and EAP-PEAP authentication support, openssl ~1.2MB, wpa_supplicant +0.04MB
+CONFIG_FIRMWARE_INCLUDE_EAP_PEAP=y
 
 ### Include HTTPS support. openssl ~1.2MB
 CONFIG_FIRMWARE_INCLUDE_HTTPS=y
 
-### Include sftp-server (and openssl libs). openssl ~1.2MB, sftp-server ~0.06MB
+### Include sftp-server. openssl ~1.2MB, sftp-server ~0.06MB
 CONFIG_FIRMWARE_INCLUDE_SFTP=y
 
-### Include dropbear SSH, ~0.3MB
+### Include dropbear SSH. ~0.3MB
 CONFIG_FIRMWARE_INCLUDE_DROPBEAR=y
 
 ### Make the dropbear symmetrical ciphers and hashes faster. ~0.06MB
 CONFIG_FIRMWARE_INCLUDE_DROPBEAR_FAST_CODE=y
 
-### Include OpenSSH (and openssl libs) instead of dropbear. openssl ~1.2MB, openssh ~1.0MB
+### Include OpenSSH instead of dropbear. openssl ~1.2MB, openssh ~1.0MB
 #CONFIG_FIRMWARE_INCLUDE_OPENSSH=y
 
-### Include OpenVPN (and openssl libs). IPv6 required. openssl ~1.2MB, openvpn ~0.4MB
+### Include OpenVPN. IPv6 required. openssl ~1.2MB, openvpn ~0.4MB
 CONFIG_FIRMWARE_INCLUDE_OPENVPN=y
 
-### Include "openssl" executable for generate certificates (~0.4MB)
+### Include "openssl" executable for generate certificates. ~0.4MB
 CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=y
 
-### Include xUPNPd IPTV Mediaserver, ~0.3MB
+### Include xUPNPd IPTV mediaserver. ~0.3MB
 CONFIG_FIRMWARE_INCLUDE_XUPNPD=y
 
-### Include Minidlna UPnP Mediaserver, ~1.6MB
+### Include Minidlna UPnP mediaserver. ~1.6MB
 CONFIG_FIRMWARE_INCLUDE_MINIDLNA=y
 
-### Include Firefly iTunes Mediaserver, ~1.0MB
+### Include Firefly iTunes mediaserver. ~1.0MB
 CONFIG_FIRMWARE_INCLUDE_FIREFLY=y
 
-### Include ffmpeg 0.11.x instead of 0.6.x for Minidlna and Firefly (robust scan, but swap needed)
+### Include ffmpeg 0.11.x instead of 0.6.x for Minidlna and Firefly. ~0.1MB
 #CONFIG_FIRMWARE_INCLUDE_FFMPEG_NEW=y
 
-### Include Transmission torrent (and openssl libs). openssl ~1.2MB, transmission ~1.5MB
+### Include Transmission torrent. openssl ~1.2MB, transmission ~1.5MB
 CONFIG_FIRMWARE_INCLUDE_TRANSMISSION=y
 
-### Include Transmission-Web-Control (advanced WebUI), ~0.8MB
+### Include Transmission-Web-Control (advanced WebUI). ~0.8MB
 CONFIG_FIRMWARE_INCLUDE_TRANSMISSION_WEB_CONTROL=y
 
-### Include Aria2 download manager (and openssl libs). openssl ~1.2MB, aria2 ~3.5MB
+### Include Aria2 download manager. openssl ~1.2MB, aria2 ~3.5MB
 CONFIG_FIRMWARE_INCLUDE_ARIA=y
 
