wifi: add support SingleSKU for MT7620, fix RT5592 build

--- a/trunk/configs/IPv4/RT-N14U/kernel-3.0.x.config
+++ b/trunk/configs/IPv4/RT-N14U/kernel-3.0.x.config
@@ -1841,6 +1841,7 @@ CONFIG_RT2860V2_AP_IGMP_SNOOP=y
 CONFIG_RT2860V2_AP_MCAST_RATE_SPECIFIC=y
 # CONFIG_RT2860V2_AP_NETIF_BLOCK is not set
 CONFIG_RT2860V2_AP_READ_MAC_FROM_MTD=y
+# CONFIG_RT2860V2_AP_SINGLE_SKU is not set
 # CONFIG_RT2860V2_AP_MEMORY_OPTIMIZATION is not set
 # CONFIG_RT2860V2_AP_ATE is not set
 # CONFIG_RT2860V2_AP_DBG is not set
