--- a/trunk/configs/n14u_nano.config
+++ b/trunk/configs/n14u_nano.config
@@ -2,7 +2,7 @@
 CONFIG_VENDOR=Ralink
 CONFIG_PRODUCT=MT7620
 
-### Target ProductID (board select, fixed 7 symbols)
+### Target ProductID (board select, max 12 symbols)
 CONFIG_FIRMWARE_PRODUCT_ID="RT-N14U"
 
 ### Firmware version (3.K.X.X-YYY)
