--- a/trunk/configs/n65u_nano.config
+++ b/trunk/configs/n65u_nano.config
@@ -2,7 +2,7 @@
 CONFIG_VENDOR=Ralink
 CONFIG_PRODUCT=RT3883
 
-### Target ProductID (board select, fixed 7 symbols)
+### Target ProductID (board select, max 12 symbols)
 #CONFIG_FIRMWARE_PRODUCT_ID="RT-N56U"
 CONFIG_FIRMWARE_PRODUCT_ID="RT-N65U"
 #CONFIG_FIRMWARE_PRODUCT_ID="SWR1100"
