www: add Ukrainian translation. Special thanks to 'Zhen_UA' and 'asavah' from iXBT forum

--- a/trunk/configs/n14u_nano.config
+++ b/trunk/configs/n14u_nano.config
@@ -103,6 +103,7 @@ CONFIG_FIRMWARE_ENABLE_EXT4=y
 #CONFIG_FIRMWARE_INCLUDE_LANG_PL=y
 CONFIG_FIRMWARE_INCLUDE_LANG_RU=y
 #CONFIG_FIRMWARE_INCLUDE_LANG_SV=y
+#CONFIG_FIRMWARE_INCLUDE_LANG_UK=y
 
 ### Include LPR printer daemon. ~0.12MB
 #CONFIG_FIRMWARE_INCLUDE_LPRD=y
