project tree: fix make error on linux .config not exist

--- a/trunk/libs/Makefile
+++ b/trunk/libs/Makefile
@@ -9,9 +9,9 @@ ROMFSDIR=$(ROOTDIR)/romfs
 endif
 
 UCLINUX_BUILD_LIB=1
--include $(CONFIG_CONFIG)
 -include $(LINUX_CONFIG)
--include $(ARCH_CONFIG)
+include $(CONFIG_CONFIG)
+include $(ARCH_CONFIG)
 
 CFLAGS  += -ffunction-sections -fdata-sections
 LDFLAGS += -Wl,--gc-sections
