kernel-3.x.x: allow to disable UDP-Lite protocol, disable UDP-Lite by default

--- a/trunk/configs/IPv6/RT-N56U/kernel-3.4.x.ram.config
+++ b/trunk/configs/IPv6/RT-N56U/kernel-3.4.x.ram.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/mips 3.4.86 Kernel Configuration
+# Linux/mips 3.4.90 Kernel Configuration
 #
 CONFIG_MIPS=y
 
@@ -233,7 +233,7 @@ CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
 CONFIG_EXPERT=y
 CONFIG_SYSCTL_SYSCALL=y
-# CONFIG_KALLSYMS is not set
+CONFIG_KALLSYMS=y
 CONFIG_HOTPLUG=y
 CONFIG_PRINTK=y
 CONFIG_BUG=y
@@ -430,6 +430,7 @@ CONFIG_INET_TUNNEL=y
 # CONFIG_INET_XFRM_MODE_BEET is not set
 # CONFIG_INET_LRO is not set
 # CONFIG_INET_DIAG is not set
+# CONFIG_INET_UDPLITE is not set
 # CONFIG_TCP_CONG_ADVANCED is not set
 CONFIG_TCP_CONG_CUBIC=y
 CONFIG_DEFAULT_TCP_CONG="cubic"
