--- a/trunk/configs/IPv6/RT-N56U/kernel-3.0.x.ram.config
+++ b/trunk/configs/IPv6/RT-N56U/kernel-3.0.x.ram.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Linux/mips 3.0.101 Kernel Configuration
+# Linux/mips 3.0.102 Kernel Configuration
 #
 CONFIG_MIPS=y
 
@@ -231,7 +231,7 @@ CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
 CONFIG_EXPERT=y
 CONFIG_SYSCTL_SYSCALL=y
-# CONFIG_KALLSYMS is not set
+CONFIG_KALLSYMS=y
 CONFIG_HOTPLUG=y
 CONFIG_PRINTK=y
 CONFIG_BUG=y
@@ -403,6 +403,7 @@ CONFIG_INET_TUNNEL=y
 # CONFIG_INET_LRO is not set
 CONFIG_IPSEC_NAT_TRAVERSAL=y
 # CONFIG_INET_DIAG is not set
+# CONFIG_INET_UDPLITE is not set
 # CONFIG_TCP_CONG_ADVANCED is not set
 CONFIG_TCP_CONG_CUBIC=y
 CONFIG_DEFAULT_TCP_CONG="cubic"
