inadyn: update to 1.99.9 with SSL support, merge duckdns and asuscomm plugins

--- a/trunk/configs/n56u_nano.config
+++ b/trunk/configs/n56u_nano.config
@@ -145,6 +145,9 @@ CONFIG_FIRMWARE_INCLUDE_U2EC=y
 ### Include EAP-TTLS and EAP-PEAP authentication support. openssl ~1.2MB, wpa_supplicant +0.04MB
 #CONFIG_FIRMWARE_INCLUDE_EAP_PEAP=y
 
+### Include HTTPS support for DDNS client. openssl ~1.2MB
+#CONFIG_FIRMWARE_INCLUDE_DDNS_SSL=y
+
 ### Include HTTPS support. openssl ~1.2MB
 #CONFIG_FIRMWARE_INCLUDE_HTTPS=y
 
