--- a/trunk/libs/Makefile
+++ b/trunk/libs/Makefile
@@ -31,6 +31,10 @@ ifeq ($(CONFIG_FIRMWARE_INCLUDE_EAP_PEAP),y)
 LIBS_INCLUDE_LIBSSL=y
 endif
 
+ifeq ($(CONFIG_FIRMWARE_INCLUDE_DDNS_SSL),y)
+LIBS_INCLUDE_LIBSSL=y
+endif
+
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_HTTPS),y)
 LIBS_INCLUDE_LIBSSL=y
 endif
