--- a/trunk/.config
+++ b/trunk/.config
@@ -147,6 +147,9 @@ CONFIG_FIRMWARE_INCLUDE_FTPD=y
 ### Include EAP-TTLS and EAP-PEAP authentication support. openssl ~1.2MB, wpa_supplicant +0.04MB
 CONFIG_FIRMWARE_INCLUDE_EAP_PEAP=y
 
+### Include HTTPS support for DDNS client. openssl ~1.2MB
+CONFIG_FIRMWARE_INCLUDE_DDNS_SSL=y
+
 ### Include HTTPS support. openssl ~1.2MB
 CONFIG_FIRMWARE_INCLUDE_HTTPS=y
 
